fix announce page button position on small screen

--- a/client/src/components/Announce.css
+++ b/client/src/components/Announce.css
@@ -1,3 +1,11 @@
 .announceBtn {
     float: right;
 }
+
+.announceBtnSection {
+    height: 38px;
+}
+
+.announceBody {
+    padding-bottom: 120px;
+}
